# lux-agent

./: .gitignore  Makefile  README.md  RELEASE_NOTES.md  agents-cli-manifest.yaml  deployment_metadata.json  pyproject.toml
.agents/skills/fetch_amazon_brands/: SKILL.md
.agents/skills/fetch_amazon_brands/references/: amazon_api_schema.md
.agents/skills/query_dma_rag/: SKILL.md
.agents/skills/query_dma_rag/references/: rag_citation_guidelines.md
app/: agent.py  agent_runtime_app.py  fast_api_app.py
app/app_utils/: telemetry.py  typing.py
artifacts/grade_results/: results_20260622_164643.html  results_20260622_164643.json
artifacts/traces/: traces_20260622_164539.json
deployment/terraform/single-project/: variables.tf
deployment/terraform/single-project/vars/: env.tfvars
frontend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
mcp_server/: pyproject.toml  server.py
tests/: conftest.py
tests/eval/: eval_config.yaml
tests/eval/datasets/: lux-audit-dataset.json
tests/integration/: test_agent.py  test_agent_runtime_app.py
tests/unit/: test_amazon_api.py  test_dummy.py
