[project]
name = "frontend"
version = "0.1.0"
description = "LUX Researcher Portal Manager Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "google-adk[gcp]>=2.0.0a0",
    "google-cloud-aiplatform>=1.156.0",
    "jinja2>=3.1.3",
    "requests>=2.34.2",
    "pydantic>=2.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
